k8s.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: NodePort
  selector:
    app: demo
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: nginx
        image: noomcomputer/demo:1.0.1
        ports:
        - containerPort: 8083
      #imagePullSecrets: 
      #- name: remote-gitlab-secret
