k8s.service.loadbalancer.yaml
# kubectl apply -f k8s.service.loadbalancer.yaml
# minikube service list
# minikube service demo-service --url
# kubectl get services
# kubectl describe service demo-service
# kubectl port-forward svc/demo-service 8083:8083
# kubectl delete service/demo-service
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
