k8s.service.nodeport.yaml
# kubectl apply -f k8s.service.nodeport.yaml
# kubectl get services
# kubectl describe service demo-service
# kubectl port-forward svc/demo-service 8083:8083
# kubectl delete service/demo-service
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: NodePort
  selector:
    app: demo
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
